samples/_failures_safe/1761561494_273613_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69c89c96.c: In function ‘main’:
./samples/SAFE/__tmp_69c89c96.c:187:9: error: expected expression at end of input
  187 |         input[
      |         ^~~~~
./samples/SAFE/__tmp_69c89c96.c:187:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_69c89c96.c:187:9: error: expected declaration or statement at end of input
